updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! My name is Christina Kerr but I go by Christi. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Austin, Texas</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Knitting, reading, and roller skating!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web development for a non-profit that I really care about.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Also Austin, Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I fell in love with coding through a computer science class I was taking at ACC. It feels like solving a puzzle and I really enjoy it.</p>
     </section>
 
     <footer id="footer">
